# revolut-expense-manager

./: .gitignore  README.md  interactive_dashboard.py  main.py  pyproject.toml  to-do.md
data/: README.md
outputs/: README.md
script/: convert_excel.py
src/: README.md  __init__.py
src/dashboard/: __init__.py  app.py  callbacks.py  categories_callbacks.py  core_callbacks.py  layouts.py  tagging_callbacks.py  timeseries_callbacks.py
src/temp/: find_public_tags.py  test_preprocessing.py  test_tagging_interface.py
src/utilities/: __init__.py  data_loader.py  paths.py
